follow bashate suggestions

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,15 @@
     - ls -laH
     - /usr/bin/curl -sSL https://gitlab.com/perobertson/scripts/raw/${CI_COMMIT_SHA}/setup.sh | bash
 
+lint:
+  stage: build
+  image: python:latest
+  tags:
+    - docker
+  script:
+    - pip install --user --upgrade bashate
+    - ~/.local/bin/bashate --ignore=E006 $(find . -name '*.sh')
+
 fedora_25:
   <<: *build_definition
   image: fedora:25
