--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,8 @@ lint:
     - pip install --user --upgrade pip
     - pip install --user --upgrade bashate
     - ~/.local/bin/bashate --ignore=E006 $(find . -name '*.sh')
+    - apt-get update && apt-get install shellcheck
+    - shellcheck --external-sources setup.sh $(find . -name '*.sh' -path '**/latest/**')
 
 
 fedora_25:
