--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,6 +78,13 @@ fedora_29:
   image: fedora:29
 
 
+fedora_30:
+  <<: *fedora_setup
+  <<: *build_definition
+  image: fedora:30
+  allow_failure: true
+
+
 fedora_rawhide:
   <<: *fedora_setup
   <<: *build_definition
