--- a/setup.yml
+++ b/setup.yml
@@ -207,6 +207,7 @@
           - bzip2-devel
           - curl
           - dkms
+          - dnf-automatic
           - dnf-plugins-core
           - fuse-sshfs
           - gcc
@@ -397,6 +398,31 @@
         dest: ~/Applications/tfenv
       tags: [ git ]
 
+    - name: RedHat - Configure security updates
+      become: true
+      copy:
+        src: files/etc/dnf/automatic.conf
+        dest: /etc/dnf/automatic.conf
+      diff: yes
+      when: ansible_os_family == 'RedHat'
+      tags: [ system ]
+    - name: RedHat - Configure security updates file permissions
+      become: true
+      file:
+        path: /etc/dnf/automatic.conf
+        mode: '0644'
+      when: ansible_os_family == 'RedHat'
+      tags: [ system ]
+    - name: RedHat - Enable security updates
+      become: true
+      systemd:
+        name: dnf-automatic.timer
+        enabled: yes
+        state: started
+        daemon_reload: yes
+      when: ansible_os_family == 'RedHat'
+      tags: [ never, system, systemd ]
+
     ### ------------------ User Settings -----------------------------
 
     - name: All - Fetch gsettings schemas
@@ -427,8 +453,9 @@
 
     - name: UI - Xresources
       copy:
-        src: files/.Xresources
+        src: files/home/user/.Xresources
         dest: ~/.Xresources
+      diff: yes
       tags: [ ui ]
 
     ### --------------------- IDEs -------------------------------------------
