log auto updates to motd, stdout

--- a/files/etc/dnf/automatic.conf
+++ b/files/etc/dnf/automatic.conf
@@ -32,7 +32,7 @@ apply_updates = yes
 # command compatible with sendmail.
 # Default is email,stdio.
 # If emit_via is None or left blank, no messages will be sent.
-emit_via = email,stdio,motd
+emit_via = stdio,motd
 
 
 [email]
