cleanup ansible script output

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -484,7 +484,7 @@
 
 [diff]
 # Always print diff when running ( same as always running with -D/--diff )
-#always = False
+always = True
 
 # Set how many context lines to show in diff
-#context = 3
+context = 5
